# OGL_Engine

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  vcpkg.json
res/Materials/: BarkMaterial.mat  BuoyMaterial.mat  CampfireMaterial.mat  EmissionMaterial1.mat  EmissionMaterial2.mat  EmissionMaterial3.mat  FireMaterial.mat  GroundMaterial.mat  ParticleFlipbookMat.mat  StoneBricksMaterial.mat  WaterMaterial.mat
res/Models/: Buoy.glb  Campfire.glb  Cube.glb  Plane2UV.glb
res/Models/Forest/: Ground.glb  Ground_Collision.glb  LakeWater.glb  Tree1.glb
res/Scenes/: DemoScene.scene  SpookyForest.scene
res/Shaders/: EmissionShader.glsl  FireShader.glsl  InvalidShader.glsl  PBRShader.glsl  ParticleFlipbook.glsl  PhongShader.glsl  PhongShader1.glsl  PointShadowShader.glsl  PostprocessShader.glsl  ShadowShader.glsl  SimpleTransparentShader.glsl  SkyboxShader.glsl  VolumetricFogShader.glsl  WaterShader.glsl
res/Shaders/Internal/: EntityHighlightShader.glsl  EntityIdShader.glsl
res/Textures/Flipbook/: FireBall02_8x8.hdr
res/Textures/Skybox/: Night_nx.hdr  Night_ny.hdr  Night_nz.hdr  Night_px.hdr  Night_py.hdr  Night_pz.hdr
src/: Application.cpp  Entity.cpp  Entity.hpp  Input.cpp  Input.hpp  Time.cpp  Time.hpp  main.cpp  pch.hpp
src/Common/: HybridSingleton.hpp
src/Components/: CameraComponent.cpp  CameraComponent.hpp  Component.cpp  Component.hpp  LightComponent.cpp  LightComponent.hpp  RendererComponent.cpp  RendererComponent.hpp  Transform.cpp  Transform.hpp  TransformComponent.cpp  TransformComponent.hpp
src/Core/: Handle.hpp  HybridSingleton.hpp  Singleton.hpp
src/Data/: MaterialData.cpp  MaterialData.hpp  MeshData.cpp  MeshData.hpp  ShaderData.cpp  ShaderData.hpp
src/Entity/: Entity.cpp  Entity.hpp
src/IO/: MaterialLoader.cpp  MaterialLoader.hpp  MeshFactory.cpp  MeshFactory.hpp  ModelLoader.cpp  ModelLoader.hpp  Serializer.cpp  Serializer.hpp  ShaderLoader.cpp  ShaderLoader.hpp  TextureLoader.cpp  TextureLoader.hpp  YAMLExtensions.cpp  YAMLExtensions.hpp
src/OGL/: FrameBuffer.cpp  FrameBuffer.hpp  Graphics.cpp  Graphics.hpp  IBindable.hpp  IndexBuffer.cpp  IndexBuffer.hpp  ShaderStructs.cpp  ShaderStructs.hpp  UniformBuffer.cpp  UniformBuffer.hpp  VertexArray.cpp  VertexArray.hpp  VertexAttributes.cpp  VertexAttributes.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/Resources/: Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  ModelLoader.cpp  ModelLoader.hpp  Resource.cpp  Resource.hpp  Shader.cpp  Shader.hpp  ShaderLoader.cpp  ShaderLoader.hpp  ShaderStructs.cpp  ShaderStructs.hpp  Texture.cpp  Texture.hpp  TextureLoader.cpp
src/Scene/: Entity.cpp  Entity.hpp  Scene.cpp  Scene.hpp
src/Systems/: InputSystem.cpp  InputSystem.hpp  LightingSystem.cpp  LightingSystem.hpp  MeshDatabase.cpp  MeshDatabase.hpp  RenderSystem.cpp  RenderSystem.hpp  ResourceDatabase.cpp  ResourceDatabase.hpp  TimeKeeper.cpp  TimeKeeper.hpp
src/Utils/: CollisionTerrain.cpp  CollisionTerrain.hpp  Spline.cpp  Spline.hpp
